add searchbar chart div and price info

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,7 +98,7 @@ table {
 
 .search-container {
   width: 90%;
-  height: 150px;
+  height: 135px;
   margin: 0 auto;
   margin-top: 100px;
   display: flex;
@@ -109,7 +109,6 @@ table {
 .portfolio-value {
   height: 70%;
   margin: 0 auto;
-  padding-right: 4px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -139,7 +138,7 @@ table {
     padding: 6px 20px 3px 20px;
     box-sizing: border-box;
     border-radius: 5px;
-    font-size: 1.2rem; }
+    font-size: 1.3rem; }
     .query-form input::placeholder {
       font-weight: 400; }
 
@@ -193,10 +192,12 @@ table {
   border-spacing: 0; }
 
 .nav-bar {
-  font-family: 'Roboto', sans-serif;
   height: 90px;
   width: 100%;
-  position: fixed; }
+  background: #fff;
+  font-family: 'Roboto', sans-serif;
+  position: fixed;
+  top: 0; }
   .nav-bar .main-color-border {
     height: 5px;
     width: 100%;
