--- a/client/src/styles/components/navbar.css
+++ b/client/src/styles/components/navbar.css
@@ -48,10 +48,12 @@ table {
   border-spacing: 0; }
 
 .nav-bar {
-  font-family: 'Roboto', sans-serif;
   height: 90px;
   width: 100%;
-  position: fixed; }
+  background: #fff;
+  font-family: 'Roboto', sans-serif;
+  position: fixed;
+  top: 0; }
   .nav-bar .main-color-border {
     height: 5px;
     width: 100%;
