--- a/client/src/styles/components/navbar.scss
+++ b/client/src/styles/components/navbar.scss
@@ -1,10 +1,13 @@
 @import '../../defaults.scss';
 
 .nav-bar {
-  font-family: 'Roboto', sans-serif;
   height: 90px;
   width: 100%;
+  background: #fff;
+  font-family: 'Roboto', sans-serif;
+
   position: fixed;
+  top: 0;
   .main-color-border {
     height: 5px;
     width: 100%;
