--- a/client/src/styles/components/trades.css
+++ b/client/src/styles/components/trades.css
@@ -50,7 +50,7 @@ table {
 .trade-container {
   width: 95%;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-top: 24px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -58,12 +58,14 @@ table {
   .trade-container .logo-container {
     width: 50px;
     height: 40px;
-    margin-bottom: 10px;
-    background: blue; }
+    margin-bottom: 10px; }
+  .trade-container img {
+    max-height: 100%;
+    max-width: 100%; }
   .trade-container .symbol {
     color: #8E94F2;
     font-size: 3.5em;
-    font-weight: 100; }
+    font-weight: 300; }
   .trade-container .company-name {
     color: #B4B5C9;
     font-size: 0.75em;
@@ -88,30 +90,32 @@ table {
   color: #8E94F2;
   font-size: 1rem;
   font-weight: 300;
-  text-align: center; }
+  text-align: center;
+  padding-top: 8px; }
   #change span {
     font-size: 0.5em; }
 
 .trade-action-container {
   width: 95%;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 30px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center; }
   .trade-action-container a {
-    width: 150px;
+    width: 122px;
     color: #F1F1F6;
-    height: 105px;
-    font-size: 2.25rem;
+    height: 41px;
+    font-size: 1.3rem;
     font-weight: 500;
-    border-radius: 4px;
+    border-radius: 16px;
     text-decoration: none;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
   .trade-action-container #buy {
     background-color: #4D3ED4; }
   .trade-action-container #sell {
