--- a/client/src/styles/components/trades.scss
+++ b/client/src/styles/components/trades.scss
@@ -3,18 +3,21 @@
 .trade-container {
   width: 95%;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-top: 24px;
   @include flex(column, flex-start, center);
   .logo-container {
     width: 50px;
     height: 40px;
     margin-bottom: 10px;
-    background: blue;
+  }
+  img {
+    max-height: 100%;
+    max-width: 100%;
   }
   .symbol {
     color: $ACCNT_PURPLE;
     font-size: 3.5em;
-    font-weight: 100;
+    font-weight: 300;
   }
   .company-name {
     color: $ACCNT_GRAY;
@@ -41,6 +44,7 @@
   font-size: 1rem;
   font-weight: 300;
   text-align: center;
+  padding-top: 8px;
   span {
     font-size: 0.5em;
   }
@@ -49,17 +53,19 @@
 .trade-action-container {
   width: 95%;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 30px;
   @include flex(row, space-around, center);
   a {
-    width: 150px;
+    width: 122px;
     color: $ACCNT_GRAY_LITE;
-    height: 105px;
-    font-size: 2.25rem;
+    height: 41px;
+    font-size: 1.3rem;
     font-weight: 500;
-    border-radius: 4px;
+    border-radius: 16px;
     text-decoration: none;
     @include flex(row, center, center);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 
+      0 1px 2px rgba(0,0,0,0.24);
   }
   #buy {
     background-color: $MAIN_PURPLE;
