--- a/client/src/styles/components/chart.css
+++ b/client/src/styles/components/chart.css
@@ -48,8 +48,8 @@ table {
   border-spacing: 0; }
 
 .chart-container {
-  width: 95%;
-  height: 185px;
+  width: 100%;
+  height: 49.7vh;
   margin: 0 auto;
-  margin-top: 10px;
-  background: #FF5C00; }
+  overflow: hidden;
+  margin-top: 50px; }
