--- a/client/src/styles/components/searchbar.css
+++ b/client/src/styles/components/searchbar.css
@@ -69,16 +69,18 @@ table {
     font-size: 0.75em;
     font-weight: 300; }
   .portfolio-value h1 {
-    color: #8E94F2;
-    font-size: 3.8rem;
-    font-weight: 100; }
+    color: #4953ea;
+    font-size: 3.2rem;
+    font-weight: 300;
+    letter-spacing: 3px; }
     .portfolio-value h1 span {
       font-size: 1.2rem;
-      color: #FF5C00; }
+      color: #FF5C00;
+      font-weight: 400; }
   .portfolio-value p {
     font-size: 0.70rem;
     color: #22CF15;
-    font-weight: 300; }
+    font-weight: 500; }
 
 .query-form {
   margin: 0 auto;
@@ -90,5 +92,3 @@ table {
     box-sizing: border-box;
     border-radius: 5px;
     font-size: 1.3rem; }
-    .query-form input::placeholder {
-      font-weight: 400; }
