--- a/client/src/styles/components/trades.css
+++ b/client/src/styles/components/trades.css
@@ -48,68 +48,86 @@ table {
   border-spacing: 0; }
 
 .trade-container {
-  width: 95%;
-  margin: 0 auto;
+  width: 100%;
   margin-top: 24px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  height: 62vh;
+  left: 50%;
+  z-index: 2;
+  position: absolute;
+  transform: translateX(-50%); }
+
+.trading, .ticker {
+  width: 90%; }
+
+.trading {
+  margin-top: 40%; }
+
+.price-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center; }
-  .trade-container .logo-container {
-    width: 50px;
-    height: 40px;
-    margin-bottom: 10px; }
-  .trade-container img {
-    max-height: 100%;
-    max-width: 100%; }
-  .trade-container .symbol {
-    color: #8E94F2;
-    font-size: 3.5em;
-    font-weight: 300; }
-  .trade-container .company-name {
-    color: #B4B5C9;
-    font-size: 0.75em;
-    font-weight: 300; }
-  .trade-container .price-container {
-    width: 100%;
-    margin: 8px;
-    padding: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-left: 2px solid #FF5C00;
-    border-right: 2px solid #FF5C00; }
+
+.logo-container {
+  width: 30px;
+  height: 20px;
+  margin-bottom: 10px;
+  margin: 0 auto; }
+
+img {
+  max-height: 100%;
+  max-width: 100%; }
+
+.symbol, .company-name {
+  text-align: right; }
+
+.symbol {
+  color: #4953ea;
+  font-size: 2.5em;
+  font-weight: 300; }
+
+.company-name {
+  color: #B4B5C9;
+  font-size: 0.75em;
+  font-weight: 300; }
 
 #price {
-  color: #8E94F2;
+  color: #4953ea;
   font-size: 3.3rem;
-  font-weight: 100; }
+  font-weight: 300; }
 
 #change {
-  color: #8E94F2;
-  font-size: 1rem;
-  font-weight: 300;
-  text-align: center;
+  color: #4953ea;
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-style: italic;
+  text-align: right;
   padding-top: 8px; }
   #change span {
     font-size: 0.5em; }
 
 .trade-action-container {
-  width: 95%;
+  width: 100%;
   margin: 0 auto;
-  margin-top: 30px;
+  padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+  background: linear-gradient(to bottom, rgba(230, 168, 237, 0.4) 50%, #fff); }
   .trade-action-container a {
-    width: 122px;
-    color: #F1F1F6;
-    height: 41px;
-    font-size: 1.3rem;
+    width: 110px;
+    color: #FFF;
+    height: 35px;
+    font-size: 1.2rem;
     font-weight: 500;
-    border-radius: 16px;
+    margin-bottom: 2px;
+    border-radius: 6px;
     text-decoration: none;
     display: flex;
     flex-direction: row;
@@ -117,6 +135,6 @@ table {
     align-items: center;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
   .trade-action-container #buy {
-    background-color: #4D3ED4; }
+    background-color: #4953ea; }
   .trade-action-container #sell {
-    background: #FF5C00; }
+    background: #ff7d33; }
