--- a/client/src/styles/components/searchbar.css
+++ b/client/src/styles/components/searchbar.css
@@ -22,7 +22,8 @@ footer, header, hgroup, menu, nav, section {
   display: block; }
 
 body {
-  line-height: 1; }
+  line-height: 1;
+  background: #1c1d30; }
 
 html, body {
   box-sizing: border-box;
@@ -65,11 +66,11 @@ table {
   justify-content: space-between;
   align-items: flex-end; }
   .portfolio-value h4 {
-    color: #E2E2E4;
+    color: #F1F1F6;
     font-size: 0.75em;
     font-weight: 300; }
   .portfolio-value h1 {
-    color: #4953ea;
+    color: #8e94f2;
     font-size: 3.2rem;
     font-weight: 300;
     letter-spacing: 3px; }
@@ -87,8 +88,10 @@ table {
   width: 100%; }
   .query-form input {
     width: 100%;
-    border: 0.5px solid #ccc;
+    border: 0.5px solid #8e94f2;
     padding: 6px 20px 3px 20px;
+    background: none;
+    color: #F1F1F6;
     box-sizing: border-box;
     border-radius: 5px;
     font-size: 1.3rem; }
