--- a/client/src/styles/components/chart.css
+++ b/client/src/styles/components/chart.css
@@ -22,7 +22,8 @@ footer, header, hgroup, menu, nav, section {
   display: block; }
 
 body {
-  line-height: 1; }
+  line-height: 1;
+  background: #1c1d30; }
 
 html, body {
   box-sizing: border-box;
