--- a/client/src/styles/components/lists.css
+++ b/client/src/styles/components/lists.css
@@ -48,44 +48,36 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.nav-bar {
-  height: 90px;
-  width: 100%;
-  background: #1c1d30;
-  font-family: 'Roboto', sans-serif;
-  position: fixed;
-  top: 0; }
-  .nav-bar .main-color-border {
-    height: 5px;
-    width: 100%;
-    background: linear-gradient(to right, #8e94f2, #E6A8ED, #F2CD8E, #FF9B58);
-    background: -webkit-linear-gradient(to right, #8e94f2, #E6A8ED, #F2CD8E, #FF9B58);
-    background: -moz-linear-gradient(to right, #8e94f2, #E6A8ED, #F2CD8E, #FF9B58);
-    background: -ms-linear-gradient(to right, #8e94f2, #E6A8ED, #F2CD8E, #FF9B58); }
-  .nav-bar .nav-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    margin-top: 15px; }
-  .nav-bar .logo {
+.lists-container {
+  width: 95%;
+  margin: 0 auto;
+  margin-top: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.single-list-container {
+  margin: 5px 0px 5px 0px;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; }
+
+.card {
+  width: 18%;
+  border: 0.6px solid #8e94f2;
+  padding: 10px 0px;
+  text-align: center;
+  margin-bottom: 6px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(255, 92, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); }
+  .card .main-listing {
+    color: #F1F1F6;
+    letter-spacing: 2px;
     font-weight: 300;
-    font-size: 1.4em;
-    color: #e9ebfd;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-end;
-    width: 40%; }
-    .nav-bar .logo .logo-image {
-      padding-right: 5px; }
-  .nav-bar #menu-icon {
-    margin-right: 19%;
-    margin-left: 3%; }
-  .nav-bar #market-hours {
-    text-align: center;
-    margin-top: 12px;
-    font-size: .5em;
-    font-weight: 100;
-    color: #4D3ED4; }
+    font-size: 1rem; }
+  .card .sub-listing {
+    font-size: 0.8rem;
+    padding: 8px 0px 0px 0px; }
