--- a/client/src/styles/components/trades.scss
+++ b/client/src/styles/components/trades.scss
@@ -21,14 +21,15 @@
   @include flex(row, flex-end, center);
 }
 .logo-container {
-  width: 30px;
-  height: 20px;
-  margin-bottom: 10px;
-  margin: 0 auto;
+  width: 60px;
+  height: 60px;
+  padding: 10px;
 }
 img {
   max-height: 100%;
   max-width: 100%;
+  margin: 0;
+  padding: 0;
 }
 .symbol, .company-name {
   text-align: right;
@@ -37,15 +38,18 @@ img {
   color: $ACCNT_PURPLE;
   font-size: 2.5em;
   font-weight: 300;
+  @include flex(row, flex-end, center);
 }
 .company-name {
-  color: $ACCNT_GRAY;
+  color: $ACCNT_PURPLE;
   font-size: 0.75em;
   font-weight: 300;
+  letter-spacing: 3px;
 }
 #price {
   // color: $ACCNT_PURPLE;
   color: $ACCNT_PURPLE;
+  // color: $ACCNT_GRAY;
   // color: rgba($color: #fff, $alpha: 0.85);
   font-size: 3.3rem;
   font-weight: 300;
@@ -53,6 +57,7 @@ img {
 
 #change {
   color: $ACCNT_PURPLE;
+  // color: $ACCNT_GRAY;
   // color: rgba($color: #fff, $alpha: 0.85);
   font-size: 1.1rem;
   font-weight: 400;
@@ -67,27 +72,29 @@ img {
 .trade-action-container {
   width: 100%;
   margin: 0 auto;
-  // margin-top: 30px;
-  padding: 10px;
-  @include flex(row, space-around, center);
-  background: linear-gradient(to bottom, rgba(230, 168, 237, 0.4) 50%, #fff);
+  padding: 12px;
+  @include flex(row, space-between, center);
+  // background: linear-gradient(to bottom, rgba(230, 168, 237, 0.4) 50%, #fff);
   a {
-    width: 110px;
-    color: #FFF;
-    height: 35px;
+    width: 45%;
+    // color: #FFF;
+    height: 70px;
     font-size: 1.2rem;
     font-weight: 500;
     margin-bottom: 2px;
     border-radius: 6px;
+    letter-spacing: 2px;
     text-decoration: none;
     @include flex(row, center, center);
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 
       0 1px 2px rgba(0,0,0,0.24);
   }
   #buy {
-    background-color: $ACCNT_PURPLE;
+    color: $ACCNT_PURPLE;
+    border: 1px solid $ACCNT_PURPLE;
   }
   #sell {
-    background: lighten($MAIN_ORANGE, 10%);
+    color: $MAIN_ORANGE;
+    border: 1px solid lighten($MAIN_ORANGE, 10%);
   }
 }
